objects/Test__c.object
<CustomObject>
    <description>For testing</description>
    <fields>
        <fullName>SnapshotDifferencesTest__c</fullName>
        <label>SnapshotDifferencesTest</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <description>CCh test</description>
        <label>Test</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_for_Commit__c</fullName>
        <description>Test for Click Deploy</description>
        <label>Test_for_Commit</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>